fix: reduce whitespace in UL LI inside highlighted code

--- a/src/styles/custom.module.css
+++ b/src/styles/custom.module.css
@@ -125,3 +125,12 @@
 .asset-hover:hover {
   opacity: 1;
 }
+
+.list-reset ul, .list-reset li {
+  line-height: 1.5em;
+  margin: 0;
+}
+
+.list-reset p {
+  margin-bottom: 0;
+}
